[project]
name = "bounty_factory"
version = "0.1.0"
description = "Automated bounty factory for open-source bounties"
requires-python = ">=3.10"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
exclude = ["tests/", ".venv/"]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.pytest]
minversion = "7.0"
testpaths = ["tests"]
